<resources>
    <string name="app_name">Postal</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_meus_pacotes">Meus Pacotes</string>
    <string name="menu_item_detalhes_pacote">Detalhes Pacote</string>
    <string name="menu_item_consultar_pacotes">Cadastro Pacotes</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abrir">Abrir</string>
    <string name="fechar">Fechar</string>
    <string name="copy">copiar</string>
    <string name="send">enviar</string>
    <string name="dt_postagem">Postado:</string>
    <string name="dt_inserido">Inserido:</string>
    <string name="dt_atualizacao">Status Recente:</string>
    <string name="SS">SS</string>
    <string name="exemploNumeroSro">123456789</string>
    <string name="exemploListaSros">ex: DM123456789BRSS123456789CN</string>
    <string name="exCodigoPais">BR</string>
    <string name="paste">paste</string>
    <string name="filter">filtrar</string>
    <string name="qrread">ler qr</string>
    <string name="clear">limpar</string>
    <string name="accept">aceitar</string>
    <string name="cancel">cancel</string>
</resources>
