<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_qrread" android:orderInCategory="2"
        android:title="@string/qrread" android:icon="@drawable/postal" app:showAsAction="always"/>

    <item android:id="@+id/action_paste" android:orderInCategory="3"
        android:title="@string/paste" android:icon="@drawable/ic_action_paste" app:showAsAction="always" />
    <item android:id="@+id/action_cancel" android:orderInCategory="4"
        android:title="@string/cancel" android:icon="@drawable/ic_action_cancel" app:showAsAction="always"></item>

    <item android:id="@+id/action_accept" android:orderInCategory="5"
        android:title="@string/accept" android:icon="@drawable/ic_action_accept" app:showAsAction="always"></item>

</menu>