
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context="br.com.alexandrealessi.postal.view.ListaDetalhesFragment"
    android:background="@color/md_white_1000"
    >

    <LinearLayout
        android:id="@+id/layCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <AutoCompleteTextView
            android:id="@+id/edtTipoServico"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:completionThreshold="1"
            android:dropDownWidth="80dp"
            android:gravity="center"
            android:hint="@string/SS"
            android:inputType="textAutoComplete|textCapCharacters"
            android:selectAllOnFocus="true"
            android:text=""
            android:textColor="#012"
            android:textSize="20dp"
            android:maxLength="2"
            />

        <EditText
            android:id="@+id/edtCode"
            style="?android:autoCompleteTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/exemploNumeroSro"
            android:inputType="number"
            android:maxLength="9"
            android:selectAllOnFocus="true"
            android:textSize="20dp"

            />

        <AutoCompleteTextView
            android:id="@+id/edtPais"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:dropDownWidth="80dp"
            android:gravity="center"
            android:inputType="textAutoComplete|textCapCharacters"
            android:selectAllOnFocus="true"
            android:text="@string/exCodigoPais"
            android:textColor="#012"
            android:textSize="20dp"
            android:maxLength="2"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layCodeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layCode"
        >
        <EditText
            android:id="@+id/edtCodeList"
            style="?android:autoCompleteTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/exemploListaSros"
            android:inputType="number"
            android:maxLength="650"
            android:selectAllOnFocus="true"
            android:textSize="12sp"
            android:singleLine="false"
            />
    </LinearLayout>




</RelativeLayout>