<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context="postaltracker.app.alexandrealessi.com.br.postal.view.ListaDetalhesFragment"
    android:background="@color/md_white_1000"
    >

    <ImageButton
        android:id="@+id/btnScanQrCode"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/postal"
        android:layout_marginTop="8dp"
        />


    <LinearLayout
        android:id="@+id/layCodeSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignTop="@id/btnScanQrCode"
        android:layout_toRightOf="@id/btnScanQrCode"
        >

        <AutoCompleteTextView
            android:id="@+id/edtTipoServico"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:completionThreshold="1"
            android:dropDownWidth="80dp"
            android:gravity="center"
            android:hint="@string/SS"
            android:inputType="textAutoComplete|textCapCharacters"
            android:selectAllOnFocus="true"
            android:text=""
            android:textColor="#012"
            android:textSize="20dp"
            android:maxLength="2"
            />

        <EditText
            android:id="@+id/edtCode"
            style="?android:autoCompleteTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/exemploNumeroSro"
            android:inputType="number"
            android:maxLength="9"
            android:selectAllOnFocus="true"
            android:textSize="20dp"

            />

        <AutoCompleteTextView
            android:id="@+id/edtPais"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:dropDownWidth="80dp"
            android:gravity="center"
            android:inputType="textAutoComplete|textCapCharacters"
            android:selectAllOnFocus="true"
            android:text="@string/exCodigoPais"
            android:textColor="#012"
            android:textSize="20dp"
            android:maxLength="2"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layActionButtons"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_toRightOf="@id/btnScanQrCode"
        android:layout_below="@id/layCodeSearch"
        android:orientation="horizontal"
        android:background="@null"
        >

        <include layout="@layout/button_copy"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageButton
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_action_paste"
                android:scaleType="fitXY"
                android:background="@color/md_white_1000"
                android:tint="@color/md_grey_900"
                android:layout_gravity="center_horizontal|top"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paste"
                android:layout_gravity="center_horizontal|bottom"
                android:textStyle="bold"
                android:textSize="12dp"
                />
        </FrameLayout>
        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageButton
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_action_send_now"
                android:scaleType="fitXY"
                android:background="@color/md_white_1000"
                android:tint="@color/md_cyan_500"
                android:layout_gravity="center_horizontal|top"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_gravity="center_horizontal|bottom"
                android:textStyle="bold"
                android:textSize="12dp"
                />
        </FrameLayout>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/laySaveDiscardButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/layActionButtons"
        android:layout_below="@id/layCodeSearch"
        android:gravity="right"
        >



        <ImageButton
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_cancel"
            android:scaleType="fitXY"
            android:background="@null"
            android:tint="@color/md_pink_500"
            />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_accept"
            android:scaleType="fitXY"
            android:background="@null"
            android:tint="@color/md_green_500"
            />
    </LinearLayout>

    <View
        android:id="@+id/divisor"
        android:layout_below="@+id/layActionButtons"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/md_grey_300"
        android:layout_gravity="top"
        android:layout_margin="8dp"
        />



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/divisor"
        android:layout_marginTop="8dp"
        >

        <android.support.v7.widget.RecyclerView

        android:id="@+id/listDetalhe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:scrollbars="vertical"
            >

        </android.support.v7.widget.RecyclerView>


    </FrameLayout>


</RelativeLayout>